--- a/server/fast_food/Procfile
+++ b/server/fast_food/Procfile
@@ -1,1 +1,1 @@
-web: uvicorn fast_food.asgi:application --host 0.0.0.0 --port 8000
+web: uvicorn fast_food.asgi:application --host 0.0.0.0 --port $PORT
